Add webtrees media API
